fix exercises
