# app.js
@@ -6,9 +6,7 @@ require('dotenv').config();
 const swaggerRouter = require('./routes/api/swagger');
 const authRouter = require('./routes/api/auth');
 const exercisesRouter = require('./routes/api/exercises');
-const filtersRouter = require('./routes/api/filters');
 const productsRouter = require('./routes/api/products');
-const categoriesRouter = require('./routes/api/categories');
 const diaryRecordsRouter = require('./routes/api/diaryRecords');
 
 const app = express();
@@ -23,9 +21,7 @@ app.use(express.static('public'));
 app.use('/api/v1/api-docs', swaggerRouter);
 app.use('/api/v1/users', authRouter);
 app.use('/api/v1/exercises', exercisesRouter);
-app.use('/api/v1/filters', filtersRouter);
 app.use('/api/v1/products', productsRouter);
-app.use('/api/v1/categories', categoriesRouter);
 app.use('/api/v1/diary-records', diaryRecordsRouter);
 
 app.use((req, res) => {
