# routes/api/categories.js
@@ -1,8 +1,0 @@
-const router = require('express').Router();
-
-const ctrl = require('../../controllers/categories');
-const { authenticate } = require('../../middlewares');
-
-router.get('/', authenticate, ctrl.getAllCategories);
-
-module.exports = router;
