# routes/api/exercises.js
@@ -5,5 +5,6 @@ const { isValidId, authenticate } = require('../../middlewares');
 
 router.get('/', authenticate, ctrl.getAllExercises);
 router.get('/:exerciseId', authenticate, isValidId, ctrl.getExerciseById);
+router.get('/filters', authenticate, ctrl.getAllFilters);
 
 module.exports = router;
