# routes/api/filters.js
@@ -1,8 +1,0 @@
-const router = require('express').Router();
-
-const ctrl = require('../../controllers/filters');
-const { authenticate } = require('../../middlewares');
-
-router.get('/', authenticate, ctrl.getAllFilters);
-
-module.exports = router;
