# routes/api/products.js
@@ -5,5 +5,6 @@ const { isValidId, authenticate } = require('../../middlewares');
 
 router.get('/', authenticate, ctrl.getAllProducts);
 router.get('/:productId', authenticate, isValidId, ctrl.getProductById);
+router.get('/categories', authenticate, ctrl.getAllCategories);
 
 module.exports = router;
