# swagger.json
@@ -21,16 +21,8 @@
             "description": "Authorization endpoints"
         },
         {
-            "name": "Categories",
-            "description": "Categories endpoints"
-        },
-        {
             "name": "Products",
             "description": "Products endpoints"
-        },
-        {
-            "name": "Filters",
-            "description": "Filters endpoints"
         },
         {
             "name": "Exercises",
@@ -202,19 +194,11 @@
                 }
             }
         },
-        "/users/{userId}": {
+        "/users": {
             "patch": {
                 "tags": ["Auth"],
                 "summary": "User update",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "userId",
-                        "required": true,
-                        "type": "string",
-                        "description": "User's ID"
-                    }
-                ],
+                "parameters": [],
                 "security": [{ "Bearer": [] }],
                 "requestBody": {
                     "description": "User update object",
@@ -315,36 +299,6 @@
                             "application/json": {
                                 "schema": {
                                     "$ref": "#/components/schemas/BadReqBodyUpdateAvatarResponse"
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-        },
-        "/categories": {
-            "get": {
-                "tags": ["Categories"],
-                "summary": "Get all categories of product",
-                "parameters": [],
-                "security": [{ "Bearer": [] }],
-                "responses": {
-                    "200": {
-                        "description": "Successful operation",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/CategoriesResponse"
-                                }
-                            }
-                        }
-                    },
-                    "401": {
-                        "description": "Unauthorized (invalid Bearer token)",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/UnauthorizedResponse"
                                 }
                             }
                         }
@@ -478,19 +432,11 @@
                 }
             }
         },
-        "/filters": {
+        "/products/categories": {
             "get": {
-                "tags": ["Filters"],
-                "summary": "Get filters",
-                "parameters": [
-                    {
-                        "in": "query",
-                        "name": "filter",
-                        "required": true,
-                        "type": "string",
-                        "description": "Exercises's filter (one of 'Body parts'|'Muscles'|'Equipment')"
-                    }
-                ],
+                "tags": ["Products"],
+                "summary": "Get all categories of products",
+                "parameters": [],
                 "security": [{ "Bearer": [] }],
                 "responses": {
                     "200": {
@@ -498,17 +444,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/FiltersResponse"
-                                }
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad request (invalid params query)",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/BadParamsFiltersResponse"
+                                    "$ref": "#/components/schemas/CategoriesResponse"
                                 }
                             }
                         }
@@ -534,21 +470,18 @@
                     {
                         "in": "query",
                         "name": "bodyPart",
-                        "required": true,
                         "type": "string",
                         "description": "Filter's 'Body part'"
                     },
                     {
                         "in": "query",
                         "name": "equipment",
-                        "required": true,
                         "type": "string",
                         "description": "Filter's 'Equipment'"
                     },
                     {
                         "in": "query",
                         "name": "target",
-                        "required": true,
                         "type": "string",
                         "description": "Filter's 'Target'"
                     }
@@ -639,6 +572,54 @@
                             "application/json": {
                                 "schema": {
                                     "$ref": "#/components/schemas/NotFoundByIdResponse"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/exercises/filters": {
+            "get": {
+                "tags": ["Exercises"],
+                "summary": "Get filters of exercises",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "filter",
+                        "required": true,
+                        "type": "string",
+                        "description": "Exercises's filter (one of 'Body parts'|'Muscles'|'Equipment')"
+                    }
+                ],
+                "security": [{ "Bearer": [] }],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/FiltersResponse"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request (invalid params query)",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/BadParamsFiltersResponse"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized (invalid Bearer token)",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UnauthorizedResponse"
                                 }
                             }
                         }
